--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: Inter, sans-serif;
   }
   button:not(:disabled),
   [role="button"]:not(:disabled) {
