feat: implement dashboard layout
Adds dashboard layout with sidebar and header.
Also adds ui components for dashboard.

--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,9 @@
   --sidebar-foreground: rgb(17 24 39);
   --sidebar-primary: rgb(37 99 235);
   --sidebar-primary-foreground: rgb(255 255 255);
-  --sidebar-accent: rgb(243 244 246);
-  --sidebar-accent-foreground: rgb(17 24 39);
+  /* --sidebar-accent: rgb(243 244 246); */
+  --sidebar-accent: rgba(59, 131, 246, 0.341);
+  --sidebar-accent-foreground: rgb(18, 102, 237);
   --sidebar-border: rgb(229 231 235);
   --sidebar-ring: rgb(37 99 235);
 }
@@ -108,7 +109,8 @@
   --sidebar-foreground: rgb(249 250 251);
   --sidebar-primary: rgb(59 130 246);
   --sidebar-primary-foreground: rgb(255 255 255);
-  --sidebar-accent: rgb(30 41 59);
+  --sidebar-accent: rgb(18, 102, 237);
+
   --sidebar-accent-foreground: rgb(249 250 251);
   --sidebar-border: rgb(51 65 85);
   --sidebar-ring: rgb(59 130 246);
